--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -1087,9 +1087,14 @@ async function loadUserTasks(userName, selectedDate = new Date().toLocaleDateStr
     const isPending = pendingUsers.includes(userName);
     const isCompleted = completedUsers.includes(userName);
 
-    const currentTurnIndex = completedTimes < requiredTimes ? completedTimes : 0;
-    const currentTurn = fullTurnOrder[currentTurnIndex];
-    const showTurn = completedTimes < requiredTimes;
+    let currentTurn = null;
+let showTurn = false;
+
+if (completedTimes < requiredTimes) {
+  currentTurn = fullTurnOrder[completedTimes];
+  showTurn = true;
+}
+
 
     let turnText = '';
     if (replacedIndexes.length > 0) {
