adjust rotation to settings in addtasks #10

--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -910,7 +910,9 @@ if (userName && adminEmail) {
     });
 
     populateUserDropdown(userName);
-    loadUserTasks(userName);
+    const today = new Date().toLocaleDateString("sv-SE");
+loadUserTasks(userName, today); // ✅ pass today's date explicitly
+
     loadUserReward(userName);
     loadLuckyChests(userName);
 
