adjust rotation to settings in addtasks #11

--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -910,9 +910,7 @@ if (userName && adminEmail) {
     });
 
     populateUserDropdown(userName);
-    const today = new Date().toLocaleDateString("sv-SE");
-loadUserTasks(userName, today); // ✅ pass today's date explicitly
-
+    loadUserTasks(userName);
     loadUserReward(userName);
     loadLuckyChests(userName);
 
