--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -703,61 +703,32 @@ body {
       taskDiv.dataset.taskDate = task.date;
 
       let currentTurn = "—", nextUser = "—", completedCount = 0, repeatLimit = 1, isCompleted = false;
-      const userName = localStorage.getItem("currentUserName") || "You";
-
-const repeat = task.repeat || "Daily";
-let requiredTimes = 1;
-
-if (task.settings === "Individual") {
-  if (repeat === "Daily") requiredTimes = task.timesPerDay || 1;
-  if (repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
-  if (repeat === "Monthly") requiredTimes = task.timesPerMonth || 1;
-} else if (task.settings === "Rotation") {
+      if (task.settings?.includes("Rotation")) {
   const rotation = calculateTurn(task, selectedDate);
-  currentTurn = rotation.currentTurn;
-  nextUser = rotation.nextUser;
   completedCount = rotation.completedCount;
   repeatLimit = rotation.repeatLimit;
-}
 
-// 🐝 Individual-specific logic
-let yourCount = 0;
-if (task.settings === "Individual") {
-  const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
-  const pendingUsers = Array.isArray(task.pendingCompletions?.[selectedDate]) ? task.pendingCompletions[selectedDate] : [];
-
-  const youCompleted = completedUsers.filter(u => u === userName).length;
-  const youPending = pendingUsers.filter(u => u === userName).length;
-  yourCount = youCompleted + youPending;
+  if (completedCount < repeatLimit) {
+    currentTurn = rotation.currentTurn;
+    nextUser = rotation.nextUser;
+  } else {
+    currentTurn = "All done!";
+    nextUser = "—";
+  }
 }
 
 
-
-
-let progressHTML = "";
-if (task.settings === "Individual") {
-  const done = yourCount >= requiredTimes;
-  progressHTML = `
-    <span style="color:${done ? 'green' : '#ffc107'};font-weight:bold;">
-      ${done ? 'Completed' : `${yourCount}/${requiredTimes}`}
-    </span><br>
-  `;
-} else if (task.settings?.includes("Rotation")) {
-  progressHTML = `
-    Turn: ${currentTurn}<br>
-    Next: ${nextUser}<br>
-    Completed: ${completedCount}/${repeatLimit}<br>
-  `;
-} else {
-  progressHTML = `<em style="color: #aaa;">No rotation</em><br>`;
-}
 
 taskDiv.innerHTML = `
   <strong>${task.title}</strong><br>
-  ${progressHTML}
+  ${task.settings?.includes("Rotation") ? `
+    Turn: ${currentTurn}<br>
+    Next: ${nextUser}<br>
+    Completed: ${completedCount}/${repeatLimit}<br>
+    ${isCompleted ? '<span style="color: green; font-weight: bold;">Completed</span><br>' : ''}
+  ` : '<em style="color: #aaa;">No rotation</em><br>'}
   <button class="delete-btn">Delete</button>
 `;
-
 
 
       taskDiv.addEventListener("click", async (e) => {
