--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -653,6 +653,11 @@ body {
 
 
 
+
+
+
+
+
         // Load tasks for a specific date
 
         async function loadTasksForDate(selectedDate) {
@@ -667,8 +672,6 @@ body {
     if (!response.ok) throw new Error(`HTTP error ${response.status}`);
     const result = await response.json();
     const tasks = result.tasks || [];
-
-    console.log("Fetched tasks, users for Task1:", tasks.find(t => t.title === "Task1")?.users);
 
     const taskList = document.getElementById("taskList");
     taskList.innerHTML = "";
@@ -702,34 +705,32 @@ body {
       taskDiv.dataset.taskTitle = task.title;
       taskDiv.dataset.taskDate = task.date;
 
-      let currentTurn = "—", nextUser = "—", completedCount = 0, repeatLimit = 1, isCompleted = false;
-      if (task.settings?.includes("Rotation")) {
-  const rotation = calculateTurn(task, selectedDate);
-  completedCount = rotation.completedCount;
-  repeatLimit = rotation.repeatLimit;
+      let taskHTML = '';
+      const required = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                      task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                      task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-  if (completedCount < repeatLimit) {
-    currentTurn = rotation.currentTurn;
-    nextUser = rotation.nextUser;
-  } else {
-    currentTurn = "All done!";
-    nextUser = "—";
-  }
-}
+      if (task.settings?.includes("Individual")) {
+        taskHTML += `<strong>${task.title}</strong><br><em>Individual Task</em><br>`;
+        task.users.forEach(user => {
+          const count = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate].filter(u => u === user).length : 0;
+          const check = count >= required ? '✅' : '';
+          taskHTML += `${user}: ${count}/${required} ${check}<br>`;
+        });
 
+      } else if (task.settings?.includes("Rotation")) {
+        const { currentTurn, nextUser, completedCount, repeatLimit } = calculateTurn(task, selectedDate);
+        taskHTML += `
+          <strong>${task.title}</strong><br>
+          Turn: ${currentTurn}<br>
+          Next: ${nextUser}<br>
+          Completed: ${completedCount}/${repeatLimit}<br>
+        `;
+      } else {
+        taskHTML += `<strong>${task.title}</strong><br><em style="color:#aaa;">No rotation</em><br>`;
+      }
 
-
-taskDiv.innerHTML = `
-  <strong>${task.title}</strong><br>
-  ${task.settings?.includes("Rotation") ? `
-    Turn: ${currentTurn}<br>
-    Next: ${nextUser}<br>
-    Completed: ${completedCount}/${repeatLimit}<br>
-    ${isCompleted ? '<span style="color: green; font-weight: bold;">Completed</span><br>' : ''}
-  ` : '<em style="color: #aaa;">No rotation</em><br>'}
-  <button class="delete-btn">Delete</button>
-`;
-
+      taskDiv.innerHTML = taskHTML + `<button class="delete-btn">Delete</button>`;
 
       taskDiv.addEventListener("click", async (e) => {
         if (!e.target.classList.contains("delete-btn")) {
@@ -761,24 +762,14 @@ taskDiv.innerHTML = `
 
 
 
+
+
+
 async function showTaskDetails(task) {
   const selectedDate = document.querySelector(".day.selected")?.dataset.date;
   if (!selectedDate) return;
 
   const userOrder = task.users && Array.isArray(task.users) ? [...task.users] : [];
-
-  let currentTurn = "—", nextUser = "—", completedCount = 0, repeatLimit = 1;
-  const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
-  const pendingUsers = Array.isArray(task.pendingCompletions?.[selectedDate]) ? task.pendingCompletions[selectedDate] : [];
-  const allCompletedUsers = [...new Set([...completedUsers, ...pendingUsers])];
-
-  if (task.settings?.includes("Rotation")) {
-    const rotation = calculateTurn(task, selectedDate);
-    currentTurn = rotation.currentTurn;
-    nextUser = rotation.nextUser;
-    completedCount = rotation.completedCount;
-    repeatLimit = rotation.repeatLimit;
-  }
 
   let taskDetails = `
     <strong>Title:</strong> ${task.title}<br>
@@ -794,20 +785,35 @@ async function showTaskDetails(task) {
     ${task.reward && task.reward !== "0" ? `<strong>Reward:</strong> ${task.reward} 🍯<br>` : ""}
   `;
 
-  if (task.settings?.includes("Rotation")) {
+  const required = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                   task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                   task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+
+  if (task.settings?.includes("Individual")) {
+    taskDetails += `<strong>Individual Progress:</strong><br>`;
+    task.users.forEach(user => {
+      const count = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate].filter(u => u === user).length : 0;
+      const check = count >= required ? '✅' : '';
+      taskDetails += `${user}: ${count}/${required} ${check}<br>`;
+    });
+
+  } else if (task.settings?.includes("Rotation")) {
+    const rotation = calculateTurn(task, selectedDate);
     taskDetails += `
-      <strong>Current Turn:</strong> ${currentTurn}<br>
-      <strong>Next:</strong> ${nextUser}<br>
-      <strong>Completed:</strong> ${completedCount}/${repeatLimit}<br>
+      <strong>Current Turn:</strong> ${rotation.currentTurn}<br>
+      <strong>Next:</strong> ${rotation.nextUser}<br>
+      <strong>Completed:</strong> ${rotation.completedCount}/${rotation.repeatLimit}<br>
     `;
   } else {
     taskDetails += `<em style="color:#aaa;">No rotation logic for this task</em><br>`;
   }
 
-  if (allCompletedUsers.length > 0) {
+  const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
+  const uniqueUsers = [...new Set(completedUsers)];
+  if (uniqueUsers.length > 0) {
     taskDetails += `
       <div style="margin-top: 8px;">
-        <strong>Completed by:</strong> ${allCompletedUsers.join(", ")}
+        <strong>Completed by:</strong> ${uniqueUsers.join(", ")}
       </div>
     `;
   }
@@ -832,6 +838,7 @@ async function showTaskDetails(task) {
     window.location.href = "/BeeMazing-Y1/mobile/3-Tasks/addtasks.html";
   });
 }
+
 
 
 
