--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -757,13 +757,12 @@ async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
 
       if (shouldReplace) {
         tasksByTitle[task.title] = {
-  turns: [],
-  pendingCount: 0,
-  date: task.date,
-  userOrder: task.users || [],
-  startDate,
-  settings: task.settings || "Rotation" // <-- ADD THIS
-};
+          turns: [],
+          pendingCount: 0,
+          date: task.date,
+          userOrder: task.users || [],
+          startDate
+        };
       } else {
         console.warn(`Duplicate task title: ${task.title}, date: ${task.date}, keeping date: ${existingTask.date}`); // Debug
         return;
@@ -812,17 +811,15 @@ if (isRotation) {
 
       console.log(`Task ${task.title}: fullTurn=${fullTurn}`); // Debug
 
-      fullTurn.forEach((item, index) => {
-  tasksByTitle[task.title].turns.push({
-    user: item.user,
-    repetition: item.repetition || null,
-    index,
-    date: task.date,
-    isPending: pendingCompletions.includes(item.user),
-    isCompleted: completions.includes(item.user)
-  });
-});
-
+      fullTurn.forEach((user, index) => {
+        tasksByTitle[task.title].turns.push({
+          user,
+          index,
+          date: task.date,
+          isPending: pendingCompletions.includes(user),
+          isCompleted: completions.includes(user)
+        });
+      });
     });
 
     // Log all duplicates
@@ -876,7 +873,6 @@ if (isRotation) {
     </div>
   `).join('')}
 </div>
-
       `;
       container.appendChild(div);
 
